--- a/styles/registrados.css
+++ b/styles/registrados.css
@@ -21,6 +21,10 @@ td.tr_headerTN{
     /*background-image: url(../images/bar2_middle.png);*/
     background-image: -webkit-linear-gradient(top,#2C3638 0,#E9E9E9 45px);
     background-image: linear-gradient(to bottom,#2C3638 0,#E9E9E9 45px);
+
+    background-color: #2C3638;
+    background-image: -moz-linear-gradient(center top , #2C3638 0px, #E9E9E9 45px);
+
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     /*border-bottom-left-radius: 3px;*/
@@ -34,6 +38,8 @@ td.tr_footerTN{
     /*background-image: url(../images/bar2_middle.png);*/
     background-image: -webkit-linear-gradient(top,#2C3638 0,#E9E9E9 45px);
     background-image: linear-gradient(to bottom,#2C3638 0,#E9E9E9 45px);
+    background-color: #2C3638;
+    background-image: -moz-linear-gradient(center top , #2C3638 0px, #E9E9E9 45px);
     /*border-bottom-left-radius: 3px;*/
     /*border-bottom-right-radius: 3px;*/
     font-size: 10px;
