practice mode added. Need to test contest mode tho.

--- a/styles/user_profile.css
+++ b/styles/user_profile.css
@@ -35,7 +35,7 @@ td.userField{
 td.userName{
     font-size: 18px;
     font-weight: bolder;
-    color: #006699;
+    color: #F60;
     border-top-width: 0px;
     border-bottom-width: 1px;
     border-left-width: 0px;
