--- a/styles/custom_tags.css
+++ b/styles/custom_tags.css
@@ -11,7 +11,8 @@ p.error{
 }
 
 a.userLink{
-    color: #ff6600;
+    /*color: #ff6600;*/
+    color: #F89406;
     font-weight: bold;
     text-decoration: none;
     font-size: 12px;
