--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,3 +1,12 @@
+/*user bar inline display*/
+label{
+	/*font-size: 12px;*/
+	display:inline;
+}
+
+div#username label{
+	display:inline;
+}
 div{
 	/*border: 1px solid #cccccc;			*/
 }
