--- a/styles/user_bar.css
+++ b/styles/user_bar.css
@@ -5,14 +5,18 @@ form.login{
 label.user{
     font-family: Arial,Helvetica,sans-serif;
     font-weight: bold;
-    color: #6699ff;
+    color: #F89406;
 }
 
-.loginfield{
+input.loginfield{
+
     /*border: 1px solid #000;*/
     /*border-radius: 5px;*/
     /*-moz-border-radius: 4px;*/
     /*-webkit-border-radius: 4px;*/
+    font-size:14px;
+    color:#F89406;
+    margin-bottom:0px;
     vertical-align: middle;
 }
 
