--- a/styles/custom_tags.css
+++ b/styles/custom_tags.css
@@ -15,10 +15,10 @@ a.userLink{
     color: #F89406;
     font-weight: bold;
     text-decoration: none;
-    font-size: 12px;
+    /*font-size: 12px;*/
 }
 a:hover.userLink{
     font-weight: bold;
-    font-size: 12px;
+    /*font-size: 12px;*/
     text-decoration: underline;
 }
